--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "country-state-city": "^3.2.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
