--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-avatar-editor": "^13.0.2",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
